<resources>
    <string name="app_name">todo</string>
    <string name="welcome">Welcome</string>
    <string name="addColor">Add Color</string>
    <string name="addCategory">Add Category</string>

    <string name="btnBackTask">Back</string>
    <string name="btnCancelTask">Cancel</string>
    <string name="btnUpdateTask">Update</string>
    <string name="delete">Delete</string>

    <!--NOMBRE DE ARCHIVO SHAREPREFERENCES-->
    <string name="nameSharePreferencesFIle">configTodo</string>
    <string name="titleMain_MainActivity">Welcome back</string>
    <string name="btn_MainActivity">Add</string>

    <string name="titleDA">Add new User</string>
    <string name="txtUser">New User</string>
    <string name="btnAddUser">Add User</string>
    <string name="btnCancelledAddUser">skip</string>

    <string name="btnAddTask">Save</string>
    <string name="titleTask">New Task</string>
    <string name="titleUpdateTask">Task</string>
    <string name="txtNameTask">Name</string>
    <string name="txtDateTask">Date</string>
    <string name="txtcategoryTask">Category</string>
    <string name="txtPriorityTask">Priority</string>
    <string name="txtSubTast">Subtask</string>
    <string name="txtMoreInfo">More</string>
    <string name="spinCategory">Choose category</string>
    <string name="spinPriority">Choose priority</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>

    <string name="showInfoTask">See more</string>
    <string name="txtDefaultValue">Default</string>
    <string name="addcategorybtn">addCategoryBtn</string>
    <string name="add_category">Add category</string>
</resources>