<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"

    >
    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="match_parent"
        >
        <CheckBox
            android:id="@+id/ckbTaskCheck"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="11sp"
            android:fontFamily="monospace" />

        <TextView
            android:id="@+id/txtNameTaskLayoutTask"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="11sp"
            android:gravity="center"
            android:fontFamily="monospace"
            android:text="@string/txtDefaultValue"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
       >

        <TextView
            android:id="@+id/txtNamePriorityLayoutTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/txtPriorityTask"
            android:textColor="@color/colorTextDialogTask"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/txtDateLayoutTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/txtDateTask"
            android:textColor="@color/colorTextDialogTask"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:layout_marginStart="12dp"
        >
        <Button
            android:id="@+id/btnShowInfoTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/showInfoTask"
            android:textSize="11sp"
            tools:ignore="TouchTargetSizeCheck"
            />
    </LinearLayout>




</LinearLayout>