<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddTaskActivity">


    <LinearLayout
        android:layout_width="418dp"
        android:layout_height="730dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:fontFamily="monospace"
            android:text="@string/titleTask"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDialogTask"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/txtNameTask"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/txtNameTask"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/colorTextDialogTask"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtdate"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/txtDateTask"
                android:textAlignment="center"
                android:textColor="@color/colorTextDialogTask"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtDateTask"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/mm_dd_yyyy"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textColor="@color/colorTextDialogTask"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="284dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/txtcategoryTask"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDialogTask"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Spinner
                android:id="@+id/spinCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/spinCategory" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="141dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtpriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="23dp"
                    android:layout_marginEnd="22dp"
                    android:fontFamily="monospace"
                    android:text="@string/txtPriorityTask"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDialogTask"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Spinner
                android:id="@+id/spinPriority"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/spinPriority" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtMoreInformation"
                    android:layout_width="match_parent"
                    android:layout_height="116dp"
                    android:ems="10"
                    android:fontFamily="monospace"
                    android:gravity="start|top"
                    android:hint="@string/txtMoreInfo"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorTextDialogTask"
                    android:textColorHint="#757575"
                    android:textStyle="italic" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="291dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAddSubTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickBtnAddSubTask"
                android:text="@string/txtSubTast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RVSubTask"
                android:layout_width="match_parent"
                android:layout_height="183dp">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancelTask"
                    android:layout_width="86dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@android:string/cancel" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white" />

                <Button
                    android:id="@+id/btnSaveTask"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="showSave"
                    android:text="@string/btnAddTask" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>